--- a/style/main.css
+++ b/style/main.css
@@ -1,8 +1,27 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    padding-top: 40px;
+    background: url("/fanshawe_wallpaper.jpg");
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    max-width: 60%;
+    border-radius: 8px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 question-edit-input {
